--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "sequelize-cli": "^6.4.1"
   },
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
