Atualizações no ambiente de dev

--- a/.env
+++ b/.env
@@ -1,9 +1,6 @@
 #Ambiente de execução
-#development
-#production
-#local
-#test
-NODE_ENV=production
+#   development   |   production    |   local   |   test
+NODE_ENV=development
 #Porta
 APP_PORT=3000
 
