Send mails e ajustes no BD
Implementação de Serviços/Projetos e Identificar usuários logados

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+APP_NAME=ARES-Technology
+APP_LINK_API=http://45.174.40.217:3000/api/v1
+
+
 #Ambiente de execução
 #   development   |   production    |   local   |   test
 NODE_ENV=development
@@ -8,3 +12,18 @@ APP_PORT=3000
 JWT_EXPIRES=30
 BRCRYPT_SECRET=$2a$12$wXGo6ht7MsctgO5Okk.TZOgZANUy/9.sLXFR76xWNd13CdbMog6oa
 JWT_SECRET=$2a$12$NMK6BdbFsXO4QXfWAAmUUO9k4lkJRpgi8U2BhTjI9akuqzu1zJ.BO
+
+#MAIL Services config
+APP_MAIL=ares.jptech.system@gmail.com
+APP_MAIL_PSW=pirulinga5@
+APP_MAIL_HOST=smtp.gmail.com
+APP_MAIL_PORT=465
+#true for 465, false for other ports
+APP_MAIL_SECURE=true
+
+#Config texto padrão
+#texto LGPD orientaões
+TEXT_LGPG=Esta mensagem pode conter dados pessoais, bem como informação confidencial ou privilegiada, sendo seu sigilo protegido por lei, devendo ser apagada e excluída da lixeira. Se você não for o destinatário ou a pessoa autorizada a recebê-la, não faça uso da mesma, nem a divulgue, apagando e excluindo-a da lixeira imediatamente.
+
+DESENVOLVEDOR_COMPANY=3conn
+DESENVOLVEDOR_NAME=João Paulo Santana Gusmão
