--- a/.env
+++ b/.env
@@ -27,3 +27,9 @@ TEXT_LGPG=Esta mensagem pode conter dados pessoais, bem como informação confid
 
 DESENVOLVEDOR_COMPANY=3conn
 DESENVOLVEDOR_NAME=João Paulo Santana Gusmão
+
+#Tempo parão para expiração das assinaturas em meses
+CONTRACT_EXPIRES=12
+DIVISION_EXPIRES=12
+PARTNER_EXPIRES=12
+USER_EXPIRES=12
