--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_LINK_API=http://45.174.40.217:3000/api/v1
 
 #Ambiente de execução
 #   development   |   production    |   local   |   test
-NODE_ENV=development
+NODE_ENV=production
 #Porta
 APP_PORT=3000
 
