Atualizações da api

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ NODE_ENV=production
 APP_PORT=3000
 
 #Security
-JWT_EXPIRES=30
+JWT_EXPIRES=3000
 BRCRYPT_SECRET=$2a$12$wXGo6ht7MsctgO5Okk.TZOgZANUy/9.sLXFR76xWNd13CdbMog6oa
 JWT_SECRET=$2a$12$NMK6BdbFsXO4QXfWAAmUUO9k4lkJRpgi8U2BhTjI9akuqzu1zJ.BO
 
@@ -33,3 +33,5 @@ CONTRACT_EXPIRES=12
 DIVISION_EXPIRES=12
 PARTNER_EXPIRES=12
 USER_EXPIRES=12
+#Extensão de período de utilização da plataforma em dias
+USER_EXPIRES_EXTEND=30
