--- a/.env
+++ b/.env
@@ -33,5 +33,7 @@ CONTRACT_EXPIRES=12
 DIVISION_EXPIRES=12
 PARTNER_EXPIRES=12
 USER_EXPIRES=12
+
 #Extensão de período de utilização da plataforma em dias
 USER_EXPIRES_EXTEND=30
+DIVISION_EXPIRES_EXTEND=360
