--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_LINK_API=http://45.174.40.217:3000/api/v1
 
 #Ambiente de execução
 #   development   |   production    |   local   |   test
-NODE_ENV=production
+NODE_ENV=local
 #Porta
 APP_PORT=3000
 
@@ -29,6 +29,7 @@ DESENVOLVEDOR_COMPANY=3conn
 DESENVOLVEDOR_NAME=João Paulo Santana Gusmão
 
 #Tempo parão para expiração das assinaturas em meses
+CUSTOMER_EXPIRES=12
 CONTRACT_EXPIRES=12
 DIVISION_EXPIRES=12
 PARTNER_EXPIRES=12
