--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 APP_NAME=ARES-Technology
 APP_LINK_API=http://45.174.40.217:3000/api/v1
 
-
+ 
 #Ambiente de execução
 #   development   |   production    |   local   |   test
-NODE_ENV=production
+NODE_ENV=development
 #Porta
 APP_PORT=3000
 
