--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_LINK_API=http://45.174.40.217:3000/api/v1
  
 #Ambiente de execução
 #   development   |   production    |   local   |   test
-NODE_ENV=development
+NODE_ENV=production
 #Porta
 APP_PORT=3000
 
@@ -38,3 +38,6 @@ USER_EXPIRES=12
 #Extensão de período de utilização da plataforma em dias
 USER_EXPIRES_EXTEND=30
 DIVISION_EXPIRES_EXTEND=360
+
+#folder para registro de arquivos
+FOLDER_RATER_FILES=./RATERS/
