--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 APP_NAME=ARES-Technology
 APP_LINK_API=http://45.174.40.217:3000/api/v1
+APP_FRONT_LINK=http://45.174.40.217:5500
 
  
 #Ambiente de execução
