--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ APP_FRONT_LINK=http://45.174.40.217:5500
  
 #Ambiente de execução
 #   development   |   production    |   local   |   test
-NODE_ENV=development
+NODE_ENV=production
 #Porta
 APP_PORT=3000
 
