--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 APP_NAME=ARES-Technology
 APP_LINK_API=http://45.174.40.217:3000/api/v1
-APP_FRONT_LINK=http://45.174.40.217:5500
+#APP_FRONT_LINK=http://45.174.40.217:5500
+APP_FRONT_LINK=http://www.connect-ares.com.br
 
  
 #Ambiente de execução
