--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@ APP_NAME=ARES-Technology
 APP_LINK_API=http://45.174.40.217:3000/api/v1
 #APP_FRONT_LINK=http://45.174.40.217:5500
 APP_FRONT_LINK=http://www.connect-ares.com.br
-
+#Api python
+API_PATH_PYTHON=http://45.174.40.217:5000/
  
 #Ambiente de execução
 #   development   |   production    |   local   |   test
@@ -43,3 +44,4 @@ DIVISION_EXPIRES_EXTEND=360
 
 #folder para registro de arquivos
 FOLDER_RATER_FILES=./RATERS/
+
