--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ APP_LINK_API=http://45.174.40.217:3000/api/v1
 #APP_FRONT_LINK=http://45.174.40.217:5500
 APP_FRONT_LINK=http://www.connect-ares.com.br
 #Api python
-API_PATH_PYTHON=http://45.174.40.217:5000/
-#API_PATH_PYTHON=http://localhost:5000/
+#API_PATH_PYTHON=http://45.174.40.217:5000/
+API_PATH_PYTHON=http://localhost:5000/
  
 #Ambiente de execução
 #   development   |   production    |   local   |   test
