--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=ARES-Technology
-APP_LINK_API=http://45.174.40.217:3000/api/v1
+APP_LINK_API=http://45.174.40.217:13000/api/v1
 #APP_FRONT_LINK=http://45.174.40.217:5500
 APP_FRONT_LINK=http://www.connect-ares.com.br
 #Api python
@@ -8,9 +8,9 @@ API_PATH_PYTHON=http://localhost:5000/
  
 #Ambiente de execução
 #   development   |   production    |   local   |   test
-NODE_ENV=production
+NODE_ENV=development
 #Porta
-APP_PORT=3000
+APP_PORT=13000
 
 #Security
 JWT_EXPIRES=120
