--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ API_PATH_PYTHON=http://localhost:5000/
  
 #Ambiente de execução
 #   development   |   production    |   local   |   test
-NODE_ENV=production
+NODE_ENV=local
 #Porta
 APP_PORT=13000
 
