--- a/.env
+++ b/.env
@@ -8,9 +8,9 @@ API_PATH_PYTHON=http://localhost:5000/
  
 #Ambiente de execução
 #   development   |   production    |   local   |   test
-NODE_ENV=local
+NODE_ENV=production
 #Porta
-APP_PORT=13000
+APP_PORT=1355 #13000
 
 #Security
 JWT_EXPIRES=360
