add funciotn find car

--- a/.env
+++ b/.env
@@ -10,7 +10,8 @@ API_PATH_PYTHON=http://localhost:5000/
 #   development   |   production    |   local   |   test
 NODE_ENV=production
 #Porta
-APP_PORT=1355 #13000
+#APP_PORT=1355 #local
+APP_PORT=13000 #dev local
 
 #Security
 JWT_EXPIRES=360
